test_suite/ERROR_create_objects_of_main_cls.java
class TheMain {
  public static void main(String[] args) { }
}

class A {
  public int foo() {
    TheMain a;
    a = new TheMain();
    return 0;
  }
}
